--- a/src/static/css/homepage.css
+++ b/src/static/css/homepage.css
@@ -1,7 +1,6 @@
 #Displayed_Name_Case {
   border: 5px solid #8d8d8d;
   padding: 5px;
-  background: #f0eded;
   width: auto;
   border-radius: 30px;
   position: relative;
